{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 22,
  "lineage": "7d20fb48-c1d3-4079-36d6-45e8d9574925",
  "resources": [
    {
      "module": "module.my-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:349133861059:network-acl/acl-042309368fe72afd0",
            "default_network_acl_id": "acl-042309368fe72afd0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-042309368fe72afd0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "349133861059",
            "subnet_ids": [
              "subnet-0515e395cf79cda35",
              "subnet-0619fb4b1e1215cf5"
            ],
            "tags": {
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f0772c1f0b8cd4bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:349133861059:route-table/rtb-0ba0f70de81702787",
            "default_route_table_id": "rtb-0ba0f70de81702787",
            "id": "rtb-0ba0f70de81702787",
            "owner_id": "349133861059",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f0772c1f0b8cd4bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:349133861059:security-group/sg-0c3b9e794c6dc47cf",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c3b9e794c6dc47cf",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "349133861059",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f0772c1f0b8cd4bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:349133861059:internet-gateway/igw-0ae9b7e019b5f5948",
            "id": "igw-0ae9b7e019b5f5948",
            "owner_id": "349133861059",
            "tags": {
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f0772c1f0b8cd4bb"
          },
          "dependencies": [
            "module.my-vpc.module.vpc.aws_vpc.this",
            "module.my-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ae9b7e019b5f5948",
            "id": "r-rtb-086789845d40da0ee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-086789845d40da0ee",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.module.vpc.aws_internet_gateway.this",
            "module.my-vpc.module.vpc.aws_route_table.public",
            "module.my-vpc.module.vpc.aws_vpc.this",
            "module.my-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:349133861059:route-table/rtb-086789845d40da0ee",
            "id": "rtb-086789845d40da0ee",
            "owner_id": "349133861059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae9b7e019b5f5948",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0772c1f0b8cd4bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.module.vpc.aws_vpc.this",
            "module.my-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016d89fd6d406a76a",
            "route_table_id": "rtb-086789845d40da0ee",
            "subnet_id": "subnet-0515e395cf79cda35"
          },
          "dependencies": [
            "module.my-vpc.module.vpc.aws_route_table.public",
            "module.my-vpc.module.vpc.aws_subnet.public",
            "module.my-vpc.module.vpc.aws_vpc.this",
            "module.my-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014b90e13a02202e2",
            "route_table_id": "rtb-086789845d40da0ee",
            "subnet_id": "subnet-0619fb4b1e1215cf5"
          },
          "dependencies": [
            "module.my-vpc.module.vpc.aws_route_table.public",
            "module.my-vpc.module.vpc.aws_subnet.public",
            "module.my-vpc.module.vpc.aws_vpc.this",
            "module.my-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:349133861059:subnet/subnet-0515e395cf79cda35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0515e395cf79cda35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "349133861059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "my-vpc-public-us-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f0772c1f0b8cd4bb"
          },
          "dependencies": [
            "module.my-vpc.module.vpc.aws_vpc.this",
            "module.my-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:349133861059:subnet/subnet-0619fb4b1e1215cf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0619fb4b1e1215cf5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "349133861059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "my-vpc-public-us-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f0772c1f0b8cd4bb"
          },
          "dependencies": [
            "module.my-vpc.module.vpc.aws_vpc.this",
            "module.my-vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:349133861059:vpc/vpc-0f0772c1f0b8cd4bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-042309368fe72afd0",
            "default_route_table_id": "rtb-0ba0f70de81702787",
            "default_security_group_id": "sg-0c3b9e794c6dc47cf",
            "dhcp_options_id": "dopt-055dd16dcf2218814",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f0772c1f0b8cd4bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba0f70de81702787",
            "owner_id": "349133861059",
            "tags": {
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "my-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}